  Utility changes:
    Added config.h.  Eventually, need to move to autoconf environment.
    Updated bskrun.c, bskcompile.c, bsktreasure.c to use config.h instead
      of duplicating common header information.
    Compile cleanly under cygwin environment.  However, this might break
      environments which were trying to implicitly include <unistd.h>.

version 1.01
  Makefile changes:
    Added a RUNLIBS variable.  Swapped order of -lbasilisk and -lm so that
      math library would be picked up correctly on some platforms.
    Re-did Makefile to allow selection of various targets (type "make"
      without arguments to get a list of supported targets).  Supported
      targets now include a dynamically linked Basilisk library.
  Utility changes:
    Changed names of 4 callback functions in bskcallback.c:
      myConsole -> BSKDefaultConsole
      myRTEHandler -> BSKDefaultRuntimeErrorHandler
      myErrorHandler -> BSKDefaultParseErrorHandler
      printStackTrace -> BSKPrintStackTrace
    Added a FILE* parameter to BSKPrintStackTrace.
    Added a new type to bskcallback.h (BSKCallbackData) which should be
      passed as the "userData" parameter to BSKExec and BSKParse
      whenever one of the "default" callbacks are used.
    Changes bskcompile.c, bskrun.c, and bsktreasure.c to use the new
      callback functions.
    Modified BSKPrintStackTrace to use new "line" member of BSKStackFrame
      to tell what line of what rule was called, for each level of the
      stack.
    Modified bsktreasure.c to correctly set default options if none are
      specified.
  Documentation Changes:
    Modified script.bnf to reflect the new preferred syntax for specifying
      parent categories for entities (using the "in" keyword).
    Modified dff.html to include documentation for new preferred syntax
      for specifying parent categories for entities (using the "in"
      keyword).
    Modified tutorial1.html to use new preferred syntax for specifying