@@ -10,4 +10,4 @@ optMaxVirtualArmorBonus=10
 optAlwaysIntelligent=no
 #optExcludeArt=yes
 #optExcludeGems=yes
-optAlwaysCursed=yes
+optAlwaysCursed=no
