@@ -13,6 +13,15 @@ version 1.02
       of duplicating common header information.
     Compile cleanly under cygwin environment.  However, this might break
       environments which were trying to implicitly include <unistd.h>.
+	Library changes:
+		There were implicit typecasts in bskexec.c, bskvalue.c, and bskparse.c
+		  that were causing C++ compilers to have problems.  These have been
+			changed to explicit typecasts.
+		bsklexer.c, in s_nextChar, was not forcing the read character to be a
+		  '\r' if a '\n' was found following a '\r'.
+		The FILE_SEPARATOR define for MACOS was added.
+		Substreams in s_parseMeta were being opened in text mode, which is not
+			portable.
 
 version 1.01
   Makefile changes:
